force-app/main/default/objects/PayPal_Transaction__c/fields/Billing_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_City__c</fullName>
    <label>Billing Address City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>