force-app/main/default/objects/PayPal_Transaction__c/fields/Billing_Address_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_CountryCode__c</fullName>
    <label>Billing Address CountryCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>