force-app/main/default/objects/PayPal_Transaction__c/fields/Billing_Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_PostalCode__c</fullName>
    <label>Billing Address PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>