force-app/main/default/objects/PayPal_Transaction__c/fields/Billing_Address_StateCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_StateCode__c</fullName>
    <label>Billing Address StateCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>