force-app/main/default/objects/PayPal_Transaction__c/fields/Billing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Street__c</fullName>
    <label>Billing Address Street</label>
    <type>TextArea</type>
</CustomField>