force-app/main/default/objects/PayPal_Transaction__c/fields/Integrated_Account__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Account__c</fullName>
    <label>Integrated Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>