force-app/main/default/objects/PayPal_Transaction__c/fields/Mailing_Address_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_CountryCode__c</fullName>
    <label>Mailing Address CountryCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>