force-app/main/default/objects/PayPal_Transaction__c/fields/Mailing_Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_PostalCode__c</fullName>
    <label>Mailing Address PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>