force-app/main/default/objects/PayPal_Transaction__c/fields/Mailing_Address_StateCode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_StateCode__c</fullName>
    <label>Mailing Address StateCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>