force-app/main/default/objects/PayPal_Transaction__c/fields/Mailing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Street__c</fullName>
    <label>Mailing Address Street</label>
    <type>TextArea</type>
</CustomField>